@@ -11,6 +11,10 @@ Package author: Andy Salnikov
 Please describe any modifications that you made to the package in the
 reverse time order.
 
+Tag: V00-04-00
+2013-05-01 Andy Salnikov
+- modify Python examples to use new convention for configuration data access
+
 Tag: V00-03-17
 2013-04-26 Andy Salnikov
 - add ConfigV5 to DumpCsPad
